--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Typemaps-Signal
 
 {{$NEXT}}
+          - Fix abstract
 
 0.001     2024-01-29 21:57:26+01:00 Europe/Brussels
           Initial release to an unsuspecting world
