--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for ExtUtils-Typemaps-Signal
 
 {{$NEXT}}
           - Fix abstract
+          - Fix repository and bugtracker metadata
 
 0.001     2024-01-29 21:57:26+01:00 Europe/Brussels
           Initial release to an unsuspecting world
