--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Typemaps-Signal
 
 {{$NEXT}}
+          - Use digraphs to allow for preprocessor conditionals in typemap
 
 0.004     2024-01-30 19:12:23+01:00 Europe/Brussels
           - Fix sigset undef handling further
