--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Typemaps-Signal
 
 {{$NEXT}}
+          - Fix struct timespec output template
 
 0.005     2024-01-31 22:01:24+01:00 Europe/Brussels
           - Use digraphs to allow for preprocessor conditionals in typemap
