--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for ExtUtils-Typemaps-Signal
 
 {{$NEXT}}
           - use "\x{23}" instead of "%:" to escape #
+          - Eliminate siginfo_t from typemap
 
 0.006     2024-06-12 19:09:24+02:00 Europe/Brussels
           - Fix struct timespec output template
