--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Typemaps-Signal
 
 {{$NEXT}}
+          - Allow Time::Spec objects for time values
 
 0.007     2025-02-04 04:33:55+01:00 Europe/Brussels
           - use "\x{23}" instead of "%:" to escape #
