--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Typemaps-Signal
 
 {{$NEXT}}
+          - Allow 0 in T_SIGNO
 
 0.008     2025-02-16 16:26:30+01:00 Europe/Brussels
           - Allow Time::Spec objects for time values
